# nfl3

./: .gitignore  CMakeLists.txt  INVESTIGATION.md  LICENSE  README.md
data/: model_coefficients.csv  schedule.csv  teams.csv
data/historical/: 2016.csv  2017.csv  2018.csv  2019.csv  2020.csv  2021.csv  2022.csv  2023.csv  2024.csv  2025.csv
scripts/: generate_historical_data.py
src/: main.cpp
src/app/: CommandSupport.cpp  CommandSupport.h
src/model/: Game.cpp  Game.h  MonteCarlo.cpp  MonteCarlo.h  Season.cpp  Season.h  Team.cpp  Team.h  Tiebreaker.cpp  Tiebreaker.h
src/output/: AsciiPrinter.cpp  AsciiPrinter.h  WebServer.cpp  WebServer.h
src/util/: BacktestFixtureLoader.cpp  BacktestFixtureLoader.h  CsvParser.cpp  CsvParser.h
tests/: test_backtest_fixture_loader.cpp  test_cli_integration.cpp  test_commands_web.cpp  test_game.cpp  test_historical_replay.cpp  test_montecarlo.cpp  test_season.cpp  test_team.cpp  test_tiebreaker.cpp
